tests/snapshots/cli_snapshots__auth_status_json.snap
---
source: tests/cli_snapshots.rs
expression: out
---
{
  "profile": null,
  "crm": "http://127.0.0.1:[PORT]",
  "token_source": "env",
  "token_status": "valid"
}
