tests/snapshots/cli_snapshots__ref_tables_console.snap
---
source: tests/cli_snapshots.rs
expression: out
---
┌────┬───────────────┬─────────┐
│ id ┆ name          ┆ seats   │
╞════╪═══════════════╪═════════╡
│ 1  ┆ Стол 1        ┆ 2-3 чел │
│ 2  ┆ Стол 2        ┆ 4-5 чел │
│ 3  ┆ Стол 3        ┆ 4-6 чел │
│ 4  ┆ Стол 4        ┆ 4-5 чел │
│ 5  ┆ Барная стойка ┆ 2-3 чел │
│ 6  ┆ Стол 6        ┆ 4-5 чел │
│ 7  ┆ Стол 7        ┆ 4-6 чел │
│ 9  ┆ Стол 8        ┆         │
│ 10 ┆ Стол 9        ┆         │
│ 11 ┆ Стол 10       ┆         │
│ 12 ┆ Стол 11       ┆         │
│ 13 ┆ Стол 12       ┆         │
└────┴───────────────┴─────────┘
