tests/snapshots/cli_snapshots__self_update_help.snap
---
source: tests/cli_snapshots.rs
assertion_line: 69
expression: help
---
Download a hw release from GitHub and replace the running hw binary with it.

Installs the latest release, or the one --to names. The SHA-256 checksum of the release
archive is verified against the .sha256 file published with it before anything is unpacked;
on a mismatch nothing is replaced. The new binary takes the old one's place in a single step
(on macOS it is ad-hoc signed first, so keychain access keeps working).

Prebuilt releases exist for x86_64 Linux (glibc), Apple Silicon macOS and x86_64 Windows;
elsewhere build from source with cargo install. A hw installed by Homebrew, Nix or the system
package manager is left alone: update it there. Nothing is sent to the CRM.

Usage: hw self update [OPTIONS]

Options:
      --to <VERSION>
          Version to install instead of the latest release: YEAR.WEEK.BUILD, e.g. 2026.41.1 or v2026.41.1

      --allow-downgrade
          Let --to install a version older than this hw

  -h, --help
          Print help (see a summary with '-h')

Global Options:
  -v, --verbose...
          Increase logging verbosity (-v, -vv, -vvv); logs go to stderr

  -q, --quiet
          Print only errors to stderr: no hints, no warnings

      --config <PATH>
          Configuration file [default: $XDG_CONFIG_HOME/hw/config.toml or ~/.config/hw/config.toml]
          
          [env: HW_CONFIG=]

  -p, --profile <NAME>
          Profile from the configuration file to use
          
          [env: HW_PROFILE=]

      --crm <CRM>
          CRM to talk to: subdomain (demo), host (demo.hookah.work) or base URL
          
          [env: HW_CRM=]

  -F, --format <FORMAT>
          Output format

          Possible values:
          - console: Tables and `key: value` lines for people
          - json:    Pretty-printed JSON
          - toon:    TOON, a compact JSON encoding for LLMs
          - toml:    TOML (a top-level list is wrapped as `items`)
          - csv:     CSV with a header row
          
          [default: console]

      --no-color
          Disable colored output (NO_COLOR is honoured too)

      --no-pager
          Do not page console output (also HW_NO_PAGER=1)

      --jq <EXPR>
          Filter the JSON result with a jq expression before formatting

      --template <TPL>
          Render the result with a minijinja template instead of --format

      --retries <N>
          Retries for rate limiting (429), server errors (5xx) and network failures; 0 disables
          
          [default: 3]

Examples:
  hw self update
  hw self update --to 2026.41.1
  hw self update --to 2026.38.2 --allow-downgrade
